--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 apply plugin: 'java'
 
 group "net.bdew.wurm"
-version "bdew-5"
+version "bdew-6-1.8beta"
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven { url "http://gotti.no-ip.org/maven/repository" }
 }
 
 dependencies {
-    compile 'org.gotti.wurmunlimited:server-modlauncher:0.33-beta1'
-}
+    compile 'org.gotti.wurmunlimited:server-modlauncher:0.38'
+    compile 'org.gotti.wurmunlimited:server:3090681'
+    compile 'org.gotti.wurmunlimited:common:3090681'}
 
 jar {
     archiveName "${project.name}.jar"
